[gd_scene load_steps=4 format=3 uid="uid://cvn2rbf4kv2yp"]

[ext_resource type="Texture2D" uid="uid://bh2s70k20ws04" path="res://Art/Items/items_2.png" id="1_vho5j"]
[ext_resource type="Script" path="res://Items/pedestal.gd" id="2_vvj1f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0waef"]
radius = 14.0

[node name="Pedestal" type="Sprite2D"]
texture = ExtResource("1_vho5j")
region_enabled = true
region_rect = Rect2(0, 16, 32, 16)
script = ExtResource("2_vvj1f")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(9, 8, -9, 8, -9, -6, 0, -6, 9, -6)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0waef")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
